update work experience

--- a/index.html
+++ b/index.html
@@ -769,15 +769,27 @@
                     <!-- MINISTRY -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">feb-2009 - may-21</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">mar-2018 - may-2021</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold">Position: accounting leader</p>
+                            <p class="font-bold">Accounting Leader</p>
                         </div>
                         <div class="md:inline-block md:text-left px-2">
                             <p class="text-md font-bold text-blue-500 uppercase">Ministry of Health</p>
                             <p>(La Plata, Buenos Aires, Argentina)</p>
-                            <p>4 people in charge. Audits, control of debts and payments to companies. Report writing. Use of Microsoft package.</p>
+                            <p>4 people in charge. Audits, control of debts and payments to companies. Report writing. Payment of employee salaries (SIGAF application). Use of Microsoft package.</p>
+                        </div>
+
+                        <div class="my-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">feb-2009 - mar-2018</p>
+                        </div>
+                        <div class="mb-4 md:mt-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold">Administrative Accounting</p>
+                        </div>
+                        <div class="md:mt-4 md:inline-block md:text-left px-2">
+                            <p class="text-md font-bold text-blue-500 uppercase">Ministry of Health</p>
+                            <p>(La Plata, Buenos Aires, Argentina)</p>
+                            <p>Arming of payment files to Companies. Attention to Companies. Monitoring company debts. Microsoft package. Use of Microsoft package.</p>
                         </div>
                     </div>
                     <!-- FIN MINISTRY -->
