--- a/index.html
+++ b/index.html
@@ -656,6 +656,26 @@
                                 <div class="mx-14 border-l-2 border-white">
                                     <div class="relative pt-5 pb-2 pl-6 bg-black bg-opacity-50">
                                         <div class="absolute -inset-2"> 
+                                            <p class="font-semibold bg-white bg-opacity-50"><i class="fa fa-circle mr-3"></i> JUNE 2021</p>
+                                        </div>
+
+                                        <div class="relative pr-2">
+                                            <p class="text-md font-bold text-blue-300 uppercase">User experience (UX)</p>
+                                            <a class="example-image-link" href="images/certifications/User Experience (UX).jpg" data-lightbox="sem-11">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <p>Educación IT (Argentina)</p>
+                                            <p class="italic">2 hours</p>
+    
+                                            <!-- <p class="text-md font-bold text-blue-300 uppercase mt-5">Introduction to Azure</p>
+                                            <a class="example-image-link" href="images/certifications/" data-lightbox="sem-11">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <p>Educación IT (Argentina)</p>
+                                            <p class="italic">2 hours</p> -->
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="mx-14 pt-8 border-l-2 border-white">
+                                    <div class="relative pt-5 pb-2 pl-6 bg-black bg-opacity-50">
+                                        <div class="absolute -inset-2"> 
                                             <p class="font-semibold bg-white bg-opacity-50"><i class="fa fa-circle mr-3"></i> MAY 2021</p>
                                         </div>
 
