--- a/index.html
+++ b/index.html
@@ -348,7 +348,14 @@
                                         </div>
 
                                         <div class="relative">
-                                            <p class="text-md font-bold text-blue-300 uppercase">MongoDB Fundamentals</p>
+                                            <p class="text-md font-bold text-blue-300 uppercase">Introduction to Api rest</p>
+                                            <a class="example-image-link" href="images/certifications/Introduccion api rest.png" data-lightbox="ed-6">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <p>EDTeam (Peru)</p>
+                                            <p class="italic">1 hour</p>
+                                        </div>
+
+                                        <div class="relative">
+                                            <p class="text-md font-bold text-blue-300 uppercase mt-5">MongoDB Fundamentals</p>
                                             <a class="example-image-link" href="images/certifications/Mongo DB Fundamentos.jpg" data-lightbox="it-14">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
                                             <p>Educación IT (Argentina)</p>
                                             <p class="italic">6 hours</p>
@@ -775,6 +782,24 @@
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">Position: co-owner</p>
+                        </div>
+                        <div class="md:inline-block md:text-left px-2">
+                            <p class="text-md font-bold text-blue-500 uppercase">Headesign</p>
+                            <p>(La Plata, Buenos Aires, Argentina)</p>
+                            <p>Web design and web applications consultant.</p>
+                            <p>Developments based on PHP, Laravel, Javascript, MySQL, Bootstrap, Tailwind CSS, GIT, GitLab, GitHub, Trello, Figma.</p>
+                            <a href="https://www.headesign.com.ar/" class="italic hover:text-blue-500">www.headesign.com.ar</a>
+                        </div>
+                    </div>
+                    <!-- FIN FREELANCE -->
+
+                    <!-- FREELANCE -->
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow pb-5 md:pt-5">
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">may-2021 - Present</p>
+                        </div>
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold">Position: developer</p>
                         </div>
                         <div class="md:inline-block md:text-left px-2">
                             <p class="text-md font-bold text-blue-500 uppercase">Headesign</p>
