--- a/index.html
+++ b/index.html
@@ -667,15 +667,25 @@
                                         </div>
 
                                         <div class="relative pr-2">
-                                            <p class="text-md font-bold text-blue-300 uppercase">User experience (UX)</p>
-                                            <a class="example-image-link" href="images/certifications/User Experience (UX).jpg" data-lightbox="sem-11">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <p class="text-md font-bold text-blue-300 uppercase mt-5">project management with scrum</p>
+                                            <a class="example-image-link" href="images/certifications/Gestión de Proyectos con Scrum.jpg" data-lightbox="sem-14">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <p>Educación IT (Argentina)</p>
+                                            <p class="italic">2 hours</p>
+                                            
+                                            <p class="text-md font-bold text-blue-300 uppercase mt-5">User experience (UX)</p>
+                                            <a class="example-image-link" href="images/certifications/User Experience (UX).jpg" data-lightbox="sem-13">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
                                             <p>Educación IT (Argentina)</p>
                                             <p class="italic">2 hours</p>
     
                                             <!-- <p class="text-md font-bold text-blue-300 uppercase mt-5">Introduction to Azure</p>
-                                            <a class="example-image-link" href="images/certifications/" data-lightbox="sem-11">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <a class="example-image-link" href="images/certifications/" data-lightbox="sem-12">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
                                             <p>Educación IT (Argentina)</p>
                                             <p class="italic">2 hours</p> -->
+
+                                            <p class="text-md font-bold text-blue-300 uppercase mt-5">introduction to software testing (QA)</p>
+                                            <a class="example-image-link" href="images/certifications/Introducción a Software Testing QA.jpg" data-lightbox="sem-11">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <p>Educación IT (Argentina)</p>
+                                            <p class="italic">2 hours</p>
                                         </div>
                                     </div>
                                 </div>
