--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                     </div>
                     <!-- FIN FREELANCE -->
 
-                    <!-- FREELANCE -->
+                    <!-- OPDS -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">may-2021 - Present</p>
@@ -812,14 +812,12 @@
                             <p class="font-bold">Position: developer</p>
                         </div>
                         <div class="md:inline-block md:text-left px-2">
-                            <p class="text-md font-bold text-blue-500 uppercase">Headesign</p>
+                            <p class="text-md font-bold text-blue-500 uppercase">opds environmental authority</p>
                             <p>(La Plata, Buenos Aires, Argentina)</p>
-                            <p>Web design and web applications consultant.</p>
-                            <p>Developments based on PHP, Laravel, Javascript, MySQL, Bootstrap, Tailwind CSS, GIT, GitLab, GitHub, Trello, Figma.</p>
-                            <a href="https://www.headesign.com.ar/" class="italic hover:text-blue-500">www.headesign.com.ar</a>
+                            <p>Web services development (SOAP - REST). Use of Microsoft SQL Server database.</p>
                         </div>
                     </div>
-                    <!-- FIN FREELANCE -->
+                    <!-- FIN OPDS -->
 
                     <!-- MINISTRY -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow mt-4 pb-5 md:pt-5">
