update webinar style

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                                         </div>
 
                                         <div class="relative pr-2">
-                                            <p class="text-md font-bold text-blue-300 uppercase mt-5">project management with scrum</p>
+                                            <p class="text-md font-bold text-blue-300 uppercase">project management with scrum</p>
                                             <a class="example-image-link" href="images/certifications/Gestión de Proyectos con Scrum.jpg" data-lightbox="sem-14">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
                                             <p>Educación IT (Argentina)</p>
                                             <p class="italic">2 hours</p>
