--- a/index.html
+++ b/index.html
@@ -110,32 +110,32 @@
                                 <div class="w-20 h-3/5 flex content-center pt-2">
                                     <img src="images/html.svg" alt="Logo de HTML" class="w-9 mx-auto" draggable="false">
                                 </div>
-                                <div class="h-2/5 flex content-end justify-center">
-                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                <div class="h-2/5 flex content-end justify-center pt-1">
+                                    <small>HTML</small>
                                 </div>
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
                                     <img src="images/css.svg" alt="Logo de CSS" class="w-8 mx-auto" draggable="false">
                                 </div>
-                                <div class="h-2/5 flex content-end justify-center">
-                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                <div class="h-2/5 flex content-end justify-center pt-1">
+                                    <small>CSS</small>
                                 </div>
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
                                     <img src="images/bootstrap.svg" alt="Logo de Boostrap" class="w-11 mx-auto" draggable="false">
                                 </div>
-                                <div class="h-2/5 flex content-end justify-center">
-                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                <div class="h-2/5 flex content-end justify-center pt-1">
+                                    <small>Bootstrap</small>
                                 </div>
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
                                     <img src="images/tailwindcss.svg" alt="Logo de Tailwind CSS" class="w-12 mx-auto" draggable="false">
                                 </div>
-                                <div class="h-2/5 flex content-end justify-center">
-                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                <div class="h-2/5 flex content-end justify-center pt-1">
+                                    <small>Tailwind</small>
                                 </div>
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
@@ -668,24 +668,19 @@
 
                                         <div class="relative pr-2">
                                             <p class="text-md font-bold text-blue-300 uppercase">project management with scrum</p>
-                                            <a class="example-image-link" href="images/certifications/Gestión de Proyectos con Scrum.jpg" data-lightbox="sem-14">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <a class="example-image-link" href="images/certifications/Gestión de Proyectos con Scrum.jpg" data-lightbox="sem-13">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
                                             <p>Educación IT (Argentina)</p>
                                             <p class="italic">2 hours</p>
                                             
                                             <p class="text-md font-bold text-blue-300 uppercase mt-5">User experience (UX)</p>
-                                            <a class="example-image-link" href="images/certifications/User Experience (UX).jpg" data-lightbox="sem-13">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <a class="example-image-link" href="images/certifications/User Experience (UX).jpg" data-lightbox="sem-12">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
                                             <p>Educación IT (Argentina)</p>
                                             <p class="italic">2 hours</p>
     
                                             <!-- <p class="text-md font-bold text-blue-300 uppercase mt-5">Introduction to Azure</p>
-                                            <a class="example-image-link" href="images/certifications/" data-lightbox="sem-12">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <a class="example-image-link" href="images/certifications/" data-lightbox="sem-11">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
                                             <p>Educación IT (Argentina)</p>
                                             <p class="italic">2 hours</p> -->
-
-                                            <p class="text-md font-bold text-blue-300 uppercase mt-5">introduction to software testing (QA)</p>
-                                            <a class="example-image-link" href="images/certifications/Introducción a Software Testing QA.jpg" data-lightbox="sem-11">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
-                                            <p>Educación IT (Argentina)</p>
-                                            <p class="italic">2 hours</p>
                                         </div>
                                     </div>
                                 </div>
@@ -791,7 +786,7 @@
                             <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">jan-2018 - Present</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold">Position: co-owner</p>
+                            <p class="font-bold">Co-owner / Developer</p>
                         </div>
                         <div class="md:inline-block md:text-left px-2">
                             <p class="text-md font-bold text-blue-500 uppercase">Headesign</p>
@@ -809,7 +804,7 @@
                             <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">may-2021 - Present</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold">Position: developer</p>
+                            <p class="font-bold">Developer</p>
                         </div>
                         <div class="md:inline-block md:text-left px-2">
                             <p class="text-md font-bold text-blue-500 uppercase">opds environmental authority</p>
