--- a/index.html
+++ b/index.html
@@ -110,32 +110,32 @@
                                 <div class="w-20 h-3/5 flex content-center pt-2">
                                     <img src="images/html.svg" alt="Logo de HTML" class="w-9 mx-auto" draggable="false">
                                 </div>
-                                <div class="h-2/5 flex content-end justify-center pt-1">
-                                    <small>HTML</small>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
                                 </div>
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
                                     <img src="images/css.svg" alt="Logo de CSS" class="w-8 mx-auto" draggable="false">
                                 </div>
-                                <div class="h-2/5 flex content-end justify-center pt-1">
-                                    <small>CSS</small>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
                                 </div>
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
                                     <img src="images/bootstrap.svg" alt="Logo de Boostrap" class="w-11 mx-auto" draggable="false">
                                 </div>
-                                <div class="h-2/5 flex content-end justify-center pt-1">
-                                    <small>Bootstrap</small>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
                                 </div>
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
                                     <img src="images/tailwindcss.svg" alt="Logo de Tailwind CSS" class="w-12 mx-auto" draggable="false">
                                 </div>
-                                <div class="h-2/5 flex content-end justify-center pt-1">
-                                    <small>Tailwind</small>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>3.5 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
                                 </div>
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
