--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
                     <!-- FIN FREELANCE -->
 
                     <!-- OPDS -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow pb-5 md:pt-5">
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">may-2021 - Present</p>
                         </div>
