update work experience

--- a/index.html
+++ b/index.html
@@ -279,6 +279,78 @@
         </div>
         <!-- FIN MY SKILLS -->
 
+        <!-- WORK EXPERIENCE -->
+        <div class="py-16 bg-gray-100 bg-opacity-75">
+            <div id="works">
+                <h2 class="text-4xl font-bold text-center tracking-wider mb-10 mx-2">My experience</h2>
+
+                <div class="container mt-4 px-8 text-center mx-auto max-w-screen-lg">
+                    <!-- FREELANCE -->
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow pb-5 md:pt-5">
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">jan-2018 - Present</p>
+                        </div>
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold">Co-owner / Developer</p>
+                        </div>
+                        <div class="md:inline-block md:text-left px-2">
+                            <p class="text-md font-bold text-blue-500 uppercase">Headesign</p>
+                            <p>(La Plata, Buenos Aires, Argentina)</p>
+                            <p>Web design and web applications consultant.</p>
+                            <p>Developments based on PHP, Laravel, Javascript, MySQL, Bootstrap, Tailwind CSS, GIT, GitLab, GitHub, Trello, Figma.</p>
+                            <a href="https://www.headesign.com.ar/" class="italic hover:text-blue-500">www.headesign.com.ar</a>
+                        </div>
+                    </div>
+                    <!-- FIN FREELANCE -->
+
+                    <!-- OPDS -->
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow mt-4 pb-5 md:pt-5">
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">may-2021 - Present</p>
+                        </div>
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold">PHP Developer</p>
+                        </div>
+                        <div class="md:inline-block md:text-left px-2">
+                            <p class="text-md font-bold text-blue-500 uppercase">opds environmental authority</p>
+                            <p>(La Plata, Buenos Aires, Argentina)</p>
+                            <p>Web services development (SOAP - REST). Use of Microsoft SQL Server database.</p>
+                        </div>
+                    </div>
+                    <!-- FIN OPDS -->
+
+                    <!-- MINISTRY -->
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow mt-4 pb-5 md:pt-5">
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">mar-2018 - may-2021</p>
+                        </div>
+                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold">Accounting Leader</p>
+                        </div>
+                        <div class="md:inline-block md:text-left px-2">
+                            <p class="text-md font-bold text-blue-500 uppercase">Ministry of Health</p>
+                            <p>(La Plata, Buenos Aires, Argentina)</p>
+                            <p>4 people in charge. Audits, control of debts and payments to companies. Report writing. Payment of employee salaries (SIGAF application). Use of Microsoft package.</p>
+                        </div>
+
+                        <div class="my-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">feb-2009 - mar-2018</p>
+                        </div>
+                        <div class="mb-4 md:mt-4 md:inline-block md:mb-0 md:mr-8">
+                            <p class="font-bold">Administrative Accounting</p>
+                        </div>
+                        <div class="md:mt-4 md:inline-block md:text-left px-2">
+                            <p class="text-md font-bold text-blue-500 uppercase">Ministry of Health</p>
+                            <p>(La Plata, Buenos Aires, Argentina)</p>
+                            <p>Arming of payment files to Companies. Attention to Companies. Monitoring company debts. Microsoft package. Use of Microsoft package.</p>
+                        </div>
+                    </div>
+                    <!-- FIN MINISTRY -->
+                </div>
+            </div>
+        </div>
+        <!-- FIN WORK EXPERIENCE -->
+
         <!-- MY STUDIES -->
         <div class="pizarron py-10">
             <div id="studies" class="text-white">
@@ -773,78 +845,6 @@
             </div>
         </div>
         <!-- FIN MY STUDIES -->
-
-        <!-- WORK EXPERIENCE -->
-        <div class="py-16 bg-gray-100 bg-opacity-75">
-            <div id="works">
-                <h2 class="text-4xl font-bold text-center tracking-wider mb-10 mx-2">My experience</h2>
-
-                <div class="container mt-4 px-8 text-center mx-auto max-w-screen-lg">
-                    <!-- FREELANCE -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow pb-5 md:pt-5">
-                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">jan-2018 - Present</p>
-                        </div>
-                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold">Co-owner / Developer</p>
-                        </div>
-                        <div class="md:inline-block md:text-left px-2">
-                            <p class="text-md font-bold text-blue-500 uppercase">Headesign</p>
-                            <p>(La Plata, Buenos Aires, Argentina)</p>
-                            <p>Web design and web applications consultant.</p>
-                            <p>Developments based on PHP, Laravel, Javascript, MySQL, Bootstrap, Tailwind CSS, GIT, GitLab, GitHub, Trello, Figma.</p>
-                            <a href="https://www.headesign.com.ar/" class="italic hover:text-blue-500">www.headesign.com.ar</a>
-                        </div>
-                    </div>
-                    <!-- FIN FREELANCE -->
-
-                    <!-- OPDS -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow mt-4 pb-5 md:pt-5">
-                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">may-2021 - Present</p>
-                        </div>
-                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold">Developer</p>
-                        </div>
-                        <div class="md:inline-block md:text-left px-2">
-                            <p class="text-md font-bold text-blue-500 uppercase">opds environmental authority</p>
-                            <p>(La Plata, Buenos Aires, Argentina)</p>
-                            <p>Web services development (SOAP - REST). Use of Microsoft SQL Server database.</p>
-                        </div>
-                    </div>
-                    <!-- FIN OPDS -->
-
-                    <!-- MINISTRY -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow mt-4 pb-5 md:pt-5">
-                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">mar-2018 - may-2021</p>
-                        </div>
-                        <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold">Accounting Leader</p>
-                        </div>
-                        <div class="md:inline-block md:text-left px-2">
-                            <p class="text-md font-bold text-blue-500 uppercase">Ministry of Health</p>
-                            <p>(La Plata, Buenos Aires, Argentina)</p>
-                            <p>4 people in charge. Audits, control of debts and payments to companies. Report writing. Payment of employee salaries (SIGAF application). Use of Microsoft package.</p>
-                        </div>
-
-                        <div class="my-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">feb-2009 - mar-2018</p>
-                        </div>
-                        <div class="mb-4 md:mt-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold">Administrative Accounting</p>
-                        </div>
-                        <div class="md:mt-4 md:inline-block md:text-left px-2">
-                            <p class="text-md font-bold text-blue-500 uppercase">Ministry of Health</p>
-                            <p>(La Plata, Buenos Aires, Argentina)</p>
-                            <p>Arming of payment files to Companies. Attention to Companies. Monitoring company debts. Microsoft package. Use of Microsoft package.</p>
-                        </div>
-                    </div>
-                    <!-- FIN MINISTRY -->
-                </div>
-            </div>
-        </div>
-        <!-- FIN WORK EXPERIENCE -->
 
         <!-- PROJECTS -->
         <div class="py-16 lg:pb-0 bg-indigo-100 bg-opacity-75">
