update work experience colors

--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
         <!-- FIN MY SKILLS -->
 
         <!-- WORK EXPERIENCE -->
-        <div class="py-16 bg-gray-100 bg-opacity-75">
+        <div class="py-16 bg-gray-200 bg-opacity-75">
             <div id="works">
                 <h2 class="text-4xl font-bold text-center tracking-wider mb-10 mx-2">My experience</h2>
 
                 <div class="container mt-4 px-8 text-center mx-auto max-w-screen-lg">
                     <!-- FREELANCE -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow pb-5 md:pt-5">
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">jan-2018 - Present</p>
                         </div>
@@ -304,7 +304,7 @@
                     <!-- FIN FREELANCE -->
 
                     <!-- OPDS -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow mt-4 pb-5 md:pt-5">
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">may-2021 - Present</p>
                         </div>
@@ -320,7 +320,7 @@
                     <!-- FIN OPDS -->
 
                     <!-- MINISTRY -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow mt-4 pb-5 md:pt-5">
+                    <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow bg-white mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">mar-2018 - may-2021</p>
                         </div>
