update course api ws

--- a/index.html
+++ b/index.html
@@ -172,6 +172,14 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/apiws.png" alt="Logo de API web services" class="w-10 mx-auto" draggable="false">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>3.5 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
+                            </div>
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
                                     <img src="images/laravel.svg" alt="Logo de Laravel" class="w-9 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
@@ -420,7 +428,14 @@
                                         </div>
 
                                         <div class="relative">
-                                            <p class="text-md font-bold text-blue-300 uppercase">Introduction to Api rest</p>
+                                            <p class="text-md font-bold text-blue-300 uppercase">API Web Services</p>
+                                            <a class="example-image-link" href="images/certifications/API Web Services.jpg" data-lightbox="it-15">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <p>Educación IT (Argentina)</p>
+                                            <p class="italic">12 hours</p>
+                                        </div>
+
+                                        <div class="relative">
+                                            <p class="text-md font-bold text-blue-300 uppercase mt-5">Introduction to Api rest</p>
                                             <a class="example-image-link" href="images/certifications/Introduccion api rest.png" data-lightbox="ed-6">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
                                             <p>EDTeam (Peru)</p>
                                             <p class="italic">1 hour</p>
